MyDev/src/objects/Bundle_Product__c.object
<CustomObject>
    <fields>
        <fullName>Product_Bundle__c</fullName>
        <label>Product Bundle</label>
        <referenceTo>Bundle__c</referenceTo>
        <relationshipLabel>Bundle Products</relationshipLabel>
        <relationshipName>Bundle_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>IF(  ISPICKVAL(Product__r.Family, &quot;Product&quot;) , &quot;Product&quot;, &quot;Service&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Bundle Products</relationshipLabel>
        <relationshipName>Bundle_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bundle Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Product Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>